--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
           </svg>
         </a>
         <!-- Email SVG Icon -->
-        <a href="mailto:your@email.com" class="text-gray-700 hover:text-gray-900 mx-2">
+        <a href="mailto:dev@lgbt.sh" class="text-gray-700 hover:text-gray-900 mx-2">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 inline-block">
             <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"></path>
           </svg>
         </a>
       </div>
       <div class="text-sm text-gray-600">
-        <a href="#" class="text-gray-700 hover:text-gray-900 mx-2">Projects</a> |
-        <a href="#" class="text-gray-700 hover:text-gray-900 mx-2">Blog</a> |
-        <a href="#" class="text-gray-700 hover:text-gray-900 mx-2">Contact</a>
+        <a href="#NOT_ADDED" class="text-gray-700 hover:text-gray-900 mx-2">Projects</a> |
+        <a href="#NOT_ADDED" class="text-gray-700 hover:text-gray-900 mx-2">Blog</a> |
+        <a href="#NOT_ADDED" class="text-gray-700 hover:text-gray-900 mx-2">Contact</a>
       </div>
     </div>
     <script>
