--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta id="site_root_url" data="/">
     <meta id="default-theme" data="light">
     <meta name="renderer" content="webkit">
-    <!-- Add Tailwind CSS link -->
+    <a rel="me" href="https://tech.lgbt/@777">Mastodon</a>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- Custom Styles -->
     <style>
