--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <meta content="telephone=no" name="format-detection">
     <meta id="site_root_url" data="/">
     <meta id="default-theme" data="light">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="renderer" content="webkit">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="css/tailwind.min.css" rel="stylesheet">
     <!-- Custom Styles -->
     <style>
       .fade-in {
