--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div class="text-sm text-gray-600">
         <a href="#NOT_ADDED" class="text-gray-700 hover:text-gray-900 mx-2">Projects</a> |
-        <a href="#NOT_ADDED" class="text-gray-700 hover:text-gray-900 mx-2">Blog</a> |
+        <a href="https://dev.lgbt.sh/blog#UNFINISHED" class="text-gray-700 hover:text-gray-900 mx-2">Blog</a> |
         <a href="#NOT_ADDED" class="text-gray-700 hover:text-gray-900 mx-2">Contact</a>
       </div>
     </div>
