--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       </div>
       <div class="text-sm text-gray-600">
         <a href="#NOT_ADDED" class="text-gray-700 hover:text-gray-900 mx-2">Projects</a> |
-        <a href="https://dev.lgbt.sh/blog#UNFINISHED" class="text-gray-700 hover:text-gray-900 mx-2">Blog</a> |
-        <a href="#NOT_ADDED" class="text-gray-700 hover:text-gray-900 mx-2">Contact</a>
+        <a href="https://blog.lgbt.sh" class="text-gray-700 hover:text-gray-900 mx-2">Blog</a> |
+        <a href="https://get.lgbt.sh" class="text-gray-700 hover:text-gray-900 mx-2">Free Subdomain</a>
       </div>
     </div>
     <script>
