--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
   </head>
   <body class="bg-gray-100 h-screen flex items-center justify-center overflow-hidden">
-      <div class="bg-white shadow-lg rounded-lg p-8 opacity-0 transition-opacity ease-in-out duration-1000 max-w-md max-h-[70vh] overflow-auto relative fade-in" id="cardContainer">
+      <div class="bg-white shadow-lg rounded-lg p-8 opacity-0 transition-opacity ease-in-out duration-1000 max-w-md max-h-[70vh] overflow-auto relative " id="cardContainer">
       <!-- Globe Icon -->
       <div class="absolute top-2 right-2">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 text-gray-600 cursor-pointer" id="languageIcon">
@@ -79,15 +79,13 @@
       </div>
     </div>
     <script>
-      // Add a script to trigger the fade-in effect after loading the content.
-      document.addEventListener('DOMContentLoaded', function () {
-      const cardContainer = document.getElementById('cardContainer');
-
-      // Adding a delay of 100 milliseconds before adding the fade-in class
-      setTimeout(() => {
-        cardContainer.classList.add('fade-in');
-      }, 100);
-      });
+        // Add a script to trigger the fade-in effect after loading the content.
+        document.addEventListener('DOMContentLoaded', function() {
+          const cardContainer = document.getElementById('cardContainer');
+  
+          // Add 'fade-in' class to trigger the fade-in effect
+          cardContainer.classList.add('fade-in');
+        });
 
 
       // Function to change the language and update the about me text with fade-in/out effect
