--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="ly-nld">
     <title>@ly-nld</title>
-    <meta name="description" content="Personal webpage of ly-nld">
+   <!-- <meta name="description" content="Personal webpage of ly-nld">-->
+    <meta name="description" content="ly-nld: Programmer, Open Source Enthusiast. GitHub, Blog, Projects. Multilingual.">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="white" name="apple-mobile-web-app-status-bar-style">
