--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="renderer" content="webkit">
     <link href="css/tailwind.min.css" rel="stylesheet">
+    <!-- Start cookieyes banner -->
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/ba409ce030aff61d8212c234/script.js"></script>
+    <!-- End cookieyes banner -->
     <!-- Custom Styles -->
     <style>
       .fade-in {
