--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         transition: opacity 0.5s ease-in-out;
       }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7760623515655300"
+     crossorigin="anonymous"></script>
   </head>
   <body class="bg-gray-100 h-screen flex items-center justify-center overflow-hidden">
       <div class="bg-white shadow-lg rounded-lg p-8 opacity-0 transition-opacity ease-in-out duration-1000 max-w-md max-h-[70vh] overflow-auto relative " id="cardContainer">
